[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Ayush Biswas <biswas.ayush03@kgpian.iitkgp.ac.in>"]
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
rand = "0.10.0-rc.0"
hex = "0.4.3"
#anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
#thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
atoi = "2.0.0"
regex = "1.12.2"
ordered-float = "5.1.0"
